# zephyr-pico-w-starter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf  west.yml
.github/workflows/: build.yml  clang-format.yml  manifest.yml  twister.yml
components/component_a/: CMakeLists.txt
components/component_a/docs/: component_a.rst
components/component_a/include/: component_a.h
components/component_a/src/: component_a.c
components/component_a/tests/: CMakeLists.txt  testcase.yaml
components/component_a/tests/src/: main.c
components/component_b/: CMakeLists.txt
components/component_b/docs/: component_b.rst
components/component_b/include/: component_b.h
components/component_b/src/: component_b.c
components/component_b/tests/: CMakeLists.txt  testcase.yaml
components/component_b/tests/src/: main.c
components/component_template/: CMakeLists.txt  create_new_component.sh  new_component.sh
components/component_template/docs/: __COMPONENT_NAME__.rst
components/component_template/include/: __COMPONENT_NAME__.h
components/component_template/src/: __COMPONENT_NAME__.c
components/component_template/tests/: CMakeLists.txt  prj.conf  testcase.yaml
components/component_template/tests/src/: main.c
components/main/: CMakeLists.txt
components/main/include/: app_start.h
components/main/src/: app_start.c  main.c
components/main/tests/: CMakeLists.txt  testcase.yaml
components/main/tests/src/: main.c
hooks/: pre-commit
scripts/: easy.sh  install-hooks.sh
